...
              />
            </Screen>
          </Animated.View>

          <Animated.View style={[$animatedContainer, visualizerAnimatedStyle]}>
            <TouchableOpacity
              testID="audioVisualizer"
              style={$fullSize}
              onPressIn={settingStore.pushToTalk ? unmute : undefined}
              onPressOut={settingStore.pushToTalk ? mute : undefined}
              activeOpacity={1}
            >
              <Screen
...
